--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.14",
+    "@rn-primitives/collapsible": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
