--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-cons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@rn-primitives/collapsible": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
